--- a/.github/workflows/openwrt-sdk-builder.yml
+++ b/.github/workflows/openwrt-sdk-builder.yml
@@ -20,7 +20,7 @@ env:
   REPO_URL: https://github.com/VIKINGYFY/immortalwrt.git
   REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: jdc.config
+  CONFIG_FILE: jdc-sdk.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
